--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.12.0
   cloud_firestore: ^4.7.0
   simple_animations: ^5.0.0+3
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
