--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.12.0
   cloud_firestore: ^4.7.0
+  firebase_auth: ^4.6.1
   simple_animations: ^5.0.0+3
   get: ^4.6.5
 
