--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^4.6.1
   simple_animations: ^5.0.0+3
   get: ^4.6.5
+  http: ^1.0.0
 
 dev_dependencies:
   flutter_test:
